...
            onSave = {},
            onLogout = {},
        )
    }
}

const val CONNECTION_SETTINGS_BASE_URL_FIELD_TAG = "connection_settings_base_url_field"
const val CONNECTION_SETTINGS_UPLOAD_PATH_FIELD_TAG = "connection_settings_upload_path_field"
const val CONNECTION_SETTINGS_WALKING_INTERVAL_FIELD_TAG = "connection_settings_walking_interval_field"
const val CONNECTION_SETTINGS_RUNNING_INTERVAL_FIELD_TAG = "connection_settings_running_interval_field"
const val CONNECTION_SETTINGS_BICYCLE_INTERVAL_FIELD_TAG = "connection_settings_bicycle_interval_field"
const val CONNECTION_SETTINGS_VEHICLE_INTERVAL_FIELD_TAG = "connection_settings_vehicle_interval_field"
const val CONNECTION_SETTINGS_STILL_INTERVAL_FIELD_TAG = "connection_settings_still_interval_field"

